Add sitemap addon and remove default home page content

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "pecotamic/sitemap": "^1.4",
         "statamic/cms": "^5.0",
         "statamic/eloquent-driver": "^4.30",
         "statamic/ssg": "^3.1"
